[package]
name = "gris"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal and flexible web application framework written in Rust."
repository = "https://github.com/wendeburg/gris"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
